--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!--header section starts-->
     <div class="header_section">
-        <div class="container">
+        <div class="container-one">
             <nav class="navbar navbar-expand-lg navbar-light navbar-fixed-top">
                 <a class="logo" href="index.html">
                     <h1>PHEONIX CHEMICALS</h1>
@@ -70,7 +70,7 @@
     <section class="products section">
         <div class="container">
             <div class="section-title">
-                <h1>Our Products</h1>
+                <h1 style="color: #CF0A0A; text-decoration:overline;">Our Products</h1>
                 <p>We offer a wide range of products for construction chemicals include most reliable products available
                     for all your needs. </p>
             </div>
@@ -104,7 +104,7 @@
             </div>
             <div class="row more">
                 <div class="col-lg-12 d-flex justify-content-center">
-                    <a href="products.html" class="btn btn-outline-primary m-5 p-3">See more products</a>
+                    <a href="products.html" class="btn btn-outline-danger m-5 p-3">See more products</a>
                 </div>
             </div>
         </div>
