--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="container-one">
             <nav class="navbar navbar-expand-lg navbar-light navbar-fixed-top">
                 <a class="logo" href="index.html">
-                    <h1>PHEONIX CHEMICALS</h1>
+                    <h1 >PHEONIX CHEMICALS</h1>
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -61,6 +61,9 @@
                 </div>
             </div>
         </div>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="#CF0A0A" fill-opacity="1" d="M0,64L48,58.7C96,53,192,43,288,58.7C384,75,480,117,576,122.7C672,128,768,96,864,85.3C960,75,1056,85,1152,96C1248,107,1344,117,1392,122.7L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path>
+          </svg>
     </div>
     <!--banner section ends-->
     <!--header section ends-->
@@ -156,6 +159,16 @@
     </footer>
     <!--footer section ends-->
     <!--======================================================================-->
+
+    <!-- Designed Section -->
+    <div class="row Design-section">
+            <h1>© Copyright<span style="color:whitesmoke;"> Phenix Chemical</span>. All Rights Reserved</h1>
+            <h1>
+                Designed by<span style="color:whitesmoke;"> GRANDEUR NET</span>
+            </h1>
+        
+    </div>
+    <!-- design section send -->
     <script async src="script.js"></script>
 </body>
 
