--- a/index.html
+++ b/index.html
@@ -66,6 +66,27 @@
     <!--header section ends-->
     <!--======================================================================-->
 
+    <!--About Section begins-->
+    <section class="about section">
+        <div class="container">
+            <div class="section-title">
+                <h1 style="color: #CF0A0A; text-decoration:overline;">About Us</h1>
+                <p>
+                    Typically waterproofing is the process of making a structure water-resistant or impervious to the ingress of water. Water-Proofing is essential that prevents water from penetrating buildings also helps to keep the inside areas dry. It helps in reducing
+                    the humidity inside the building, minimizing the damage done to furniture and alike.In areas that experience high annual rainfall and occasional flooding events, water-Proofing is a must. At Pheonix Chemicals we offer a wide range
+                    of waterproofing by you can safeguard your building from damage as well as these things inside your house from water and humidity exposure.
+                </p>
+            </div>
+            <div class="d-flex justify-content-center">
+                <a href="About.html" class="btn btn-outline-danger m-5 p-3">See more</a>
+            </div>
+        </div>
+    </section>
+
+    <!--About section ends-->
+    <!--======================================================================-->
+
+
     <!---products section starts-->
     <section class="products section">
         <div class="container">
